# graphql-mcp

./: .gitignore  CONNECTION_ERROR_DEMO.md  Critical Bugs Found.md  Dockerfile  ENDPOINT_REFACTORING_SUMMARY.md  HTTPCLIENT_OPTIMIZATION_SUMMARY.md  HTTP_CLIENT_REFACTORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INCONSISTENT_USAGE_PATTERNS_RESOLUTION.md  MULTI_ENDPOINT_GUIDE.md  Program.cs  README.md  SINGLETON_ANTIPATTERN_FIX.md  SMART_RESPONSES_COMPLETE.md  SMART_RESPONSES_IMPLEMENTATION_COMPLETE.md  STATE_PERSISTENCE_FIX_SUMMARY.md  TOOL_CONSOLIDATION.md  combine.md  compose.yaml  demo.sh  demo_dynamic_tools.sh  demo_multi_endpoint.sh  graphql-mcp.csproj  graphql-mcp.sln  grapql-mcp.csproj  grapql-mcp.sln  smart tool responses.md  test-query.graphql  test_fix_verification.sh  test_singleton_fix.sh
DTO/: AnalyticsInfo.cs  ArgumentInfo.cs  AuthenticationInfo.cs  BatchExecutionResponse.cs  BatchOperationResult.cs  BatchQueryRequest.cs  BatchQueryResult.cs  BatchSummary.cs  BestPracticesAdvice.cs  BuildConfiguration.cs  CacheMetadata.cs  CodeGenerationResult.cs  ComplexityAnalysis.cs  ComplexityMetrics.cs  ComplianceCheck.cs  ComprehensiveResponse.cs  DataFreshness.cs  DevelopmentGuide.cs  DirectiveInfo.cs  DynamicToolInfo.cs  EndpointComparisonResult.cs  EndpointMetadata.cs  EnumValueInfo.cs  ErrorAnalysis.cs  ErrorAnalysisResult.cs  ErrorInfo.cs  ErrorLocation.cs  ExecutionError.cs  ExecutionMetadata.cs  ExecutionResult.cs  FieldInfo.cs  FieldUsage.cs  FieldUsageAnalysisResult.cs  FieldUsageStats.cs  FormatOptions.cs  GraphQlComprehensiveResponse.cs  GraphQlEndpointInfo.cs  GraphQlError.cs  GraphQlExecutionResponse.cs  GraphQlTypeInfo.cs  (+63 more)
Docs/: COMBINED_OPERATIONS_IMPLEMENTATION_SUMMARY.md  COMBINED_OPERATIONS_README.md  CONNECTION_ERROR_DEMO.md  DEMO_DYNAMIC_TOOLS.md  DYNAMIC_TOOLS_GENERATION_FIX.md  DYNAMIC_TOOLS_README.md  ENDPOINT_REFACTORING_SUMMARY.md  HEADER_FIXES_SUMMARY.md  HEADER_REFACTORING_COMPLETE_SUMMARY.md  HTTPCLIENT_DI_REFACTORING_SUMMARY.md  HTTPCLIENT_OPTIMIZATION_SUMMARY.md  HTTP_CLIENT_REFACTORING_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MCP_TOOL_DESCRIPTIONS_REVIEW.md  MULTI_ENDPOINT_GUIDE.md  MULTI_ENDPOINT_REFACTORING_SUMMARY.md  PROMPTS_DEMO.md  README.md  RICH_TOOL_DESCRIPTIONS_IMPLEMENTATION.md  SCHEMA_EXPLORATION_TOOLS_IMPLEMENTATION.md  SCHEMA_INTROSPECTION_REFACTORING.md  SINGLETON_SERVICE_FIX.md  SMART_RESPONSES_IMPLEMENTATION.md  STATE_PERSISTENCE_FIX_SUMMARY.md  STRAWBERRYSHAKE_REFACTORING_SUMMARY.md  test_endpoint_fix.md  test_performance_optimization.md  test_schema_introspection_refactor.md
Examples/: StrawberryShakeExample.cs
Helpers/: CombinedOperationsService.cs  EndpointRegistryService.cs  GraphQLHttpClient.cs  GraphQLOperationHelper.cs  GraphQLSchemaHelper.cs  GraphQLToolGenerator.cs  GraphQLTypeHelpers.cs  HttpClientHelper.cs  IGraphQLHttpClient.cs  (+5 more)
graphql-mcp-python/: .env.example  README.md  pyproject.toml  requirements.txt  setup.py
graphql-mcp-python/docker/: Dockerfile
graphql-mcp-python/langraph-agent/: README.md  __init__.py  config.py  csharp_to_graphql_agent.py  example_usage.py  langgraph.json  pyproject.toml  requirements.txt
graphql-mcp-python/langraph-agent/langraph_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
graphql-mcp-python/src/graphql_mcp/: __init__.py  main.py
graphql-mcp-python/src/graphql_mcp/config/: __init__.py  settings.py
graphql-mcp-python/src/graphql_mcp/helpers/: __init__.py  combined_operations.py  endpoint_registry.py  http_client.py  json_helpers.py  markdown_helpers.py  schema_helper.py  smart_response.py
graphql-mcp-python/src/graphql_mcp/models/: __init__.py  base.py  batch.py  core.py  performance.py  query.py  schema.py  security.py
graphql-mcp-python/src/graphql_mcp/prompts/: __init__.py  graphql_prompts.py  workflow_prompts.py
graphql-mcp-python/src/graphql_mcp/tools/: __init__.py  base_tool.py  code_migration.py  combined_operations.py  development_tools.py  endpoint_management.py  query_tools.py  schema_tools.py  utility_tools.py
graphql-mcp-python/tests/: __init__.py
(+68 files in other folders)
